Add image support for post cards and articles

--- a/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
+++ b/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
@@ -9,6 +9,7 @@ tags:
   - "resveratrol"
   - "brain"
   - "cognition"
+image: "/images/posts/resveratrol-memory.webp"
 ---
 Silicon Valley has a new status symbol, and it is not a watch, a car, or a cold plunge setup. It is a tiny capsule of resveratrol that costs roughly $200 a month when bundled with premium formulations and coaching. Founders are calling it a “memory hedge.” Translation: keep your edge while everyone else burns out.
 
