--- a/content/posts/the-nad-plus-uptick-that-cut-afternoon-brain-fog.mdx
+++ b/content/posts/the-nad-plus-uptick-that-cut-afternoon-brain-fog.mdx
@@ -9,6 +9,7 @@ tags:
   - "nmn"
   - "nad+"
   - "brain"
+image: "/images/posts/nad-brain-fog.webp"
 ---
 The productivity crash around 3 PM is not always a willpower problem. Sometimes it is bioenergetics. NAD+ is the coenzyme behind mitochondrial output, DNA repair, and cellular stress response. When levels drop with age, your brain often feels it first.
 
