--- a/content/posts/the-polyphenol-stack-quietly-winning-in-cognition-clinics.mdx
+++ b/content/posts/the-polyphenol-stack-quietly-winning-in-cognition-clinics.mdx
@@ -8,7 +8,8 @@ study_url: "https://pubmed.ncbi.nlm.nih.gov/25199822/"
 tags:
   - "resveratrol"
   - "cognition"
-  - "brain"
+  - "clinics"
+image: "/images/posts/polyphenol-cognition.webp"
 ---
 Clinicians working in preventive cognition are not chasing shiny compounds anymore. They are choosing interventions with plausible mechanisms and repeatable human data. Polyphenols keep making the shortlist because they hit inflammation, endothelial function, and glucose control at the same time.
 
