Fix MDX compiler error: escape < before digits (CoQ10)

--- a/content/posts/coq10-mitochondrial-energy-aging.mdx
+++ b/content/posts/coq10-mitochondrial-energy-aging.mdx
@@ -31,10 +31,10 @@ Without adequate CoQ10, your cells produce less energy and accumulate more damag
 
 Multiple factors deplete CoQ10:
 
-- **Aging** (production drops 50-60% by age 50)
-- **Statin drugs** (block CoQ10 synthesis as side effect)
-- **Oxidative stress** (uses up CoQ10 as antioxidant)
-- **Poor diet** (most people consume <5mg/day; need 100mg+)
+1. **Aging** (production drops 50-60% by age 50)
+2. **Statin drugs** (block CoQ10 synthesis as side effect)
+3. **Oxidative stress** (uses up CoQ10 as antioxidant)
+4. **Poor diet** (most people consume &lt;5mg/day; need 100mg+)
 
 The result? **Chronic fatigue, muscle pain, brain fog, cardiovascular decline.**
 
