Fix MDX compiler error: escape < before digits (Vitamin D)

--- a/content/posts/vitamin-d-immune-system-deficiency.mdx
+++ b/content/posts/vitamin-d-immune-system-deficiency.mdx
@@ -14,7 +14,7 @@ tags:
 
 **If you're not supplementing vitamin D, you're almost certainly deficient.**
 
-A 2024 global health assessment found **88% of adults have suboptimal vitamin D levels** (<30 ng/mL), with 40% severely deficient (<20 ng/mL). This widespread deficiency increases:
+A 2024 global health assessment found **88% of adults have suboptimal vitamin D levels** (&lt;30 ng/mL), with 40% severely deficient (&lt;20 ng/mL). This widespread deficiency increases:
 
 - **Infection risk by 50%** (colds, flu, respiratory infections)
 - **All-cause mortality by 57%**
@@ -57,7 +57,7 @@ Optimal vitamin D levels improve:
 
 Blood levels (25-OH vitamin D):
 
-- **<20 ng/mL:** Severely deficient (high disease risk)
+- **&lt;20 ng/mL:** Severely deficient (high disease risk)
 - **20-30 ng/mL:** Insufficient (minimal but inadequate)
 - **40-60 ng/mL:** Optimal (target range)
 - **60-80 ng/mL:** Ideal for longevity enthusiasts
@@ -92,7 +92,7 @@ Quality vitamin D supplements:
 
 ---
 
-**Ready to optimize your immune foundation?** MASI's Vitamin D3+K2 delivers 5,000 IU of D3 with 100mcg K2 (MK-7) per softgel—the research-backed combination for immune health, bone strength, and longevity.
+**Ready to optimize your immune foundation?** Vitamin D3+K2 delivers 5,000 IU of D3 with 100mcg K2 (MK-7) per softgel—the research-backed combination for immune health, bone strength, and longevity.
 
 [**Try Vitamin D3 + K2 →**](https://masi.eu/en-usd/products/vitamin-d3-k2)
 
