--- a/content/posts/nmn-reverses-brain-aging-mouse-study.mdx
+++ b/content/posts/nmn-reverses-brain-aging-mouse-study.mdx
@@ -58,4 +58,4 @@ Not all NMN is created equal. Clinical-grade formulations should be:
 ✓ **Pharmaceutical manufacturing** (GMP-certified facilities)  
 ✓ **Liposomal or sublingual** delivery for maximum absorption
 
-**Source:** Xu et al. (2025). "NMN ameliorates D-galactose-induced neurodegeneration via Sirt1 pathway activation." *Experimental Gerontology*. https://pmc.ncbi.nlm.nih.gov/articles/PMC12018880/
+**Source:** Xu et al. (2025). "NMN ameliorates D-galactose-induced neurodegeneration via Sirt1 pathway activation." *Experimental Gerontology*. [Read full text on PubMed Central](https://pmc.ncbi.nlm.nih.gov/articles/PMC12018880/)
