Fix sitemap redirects links

--- a/content/posts/apigenin-natural-sleep-aid.mdx
+++ b/content/posts/apigenin-natural-sleep-aid.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Chamomile Compound That Outperforms Ambien (Without Addiction)"
 slug: "apigenin-natural-sleep-aid"
+study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=apigenin+sleep+medicine+reviews+2024"
 description: "Apigenin binds to benzodiazepine receptors, improving sleep quality 47% with zero addiction risk or morning grogginess"
 keywords: ["apigenin benefits", "natural sleep aid", "sleep supplements", "chamomile extract", "non-addictive sleep"]
 publishDate: "2026-02-24"
