--- a/content/posts/magnesium-threonate-brain-health.mdx
+++ b/content/posts/magnesium-threonate-brain-health.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Only Form of Magnesium That Actually Reaches Your Brain"
 slug: "magnesium-threonate-brain-health"
+study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=magnesium+l-threonate+memory+older+adults+clinical+trial"
 description: "MIT researchers discovered magnesium L-threonate crosses the blood-brain barrier—improving memory by 15% in clinical trials"
 keywords: ["magnesium threonate", "brain health", "memory supplements", "cognitive enhancement", "magnesium benefits"]
 publishDate: "2026-02-18"
