--- a/content/posts/berberine-natural-ozempic-weight-loss.mdx
+++ b/content/posts/berberine-natural-ozempic-weight-loss.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Nature's Ozempic: The $12 Supplement That Mimics the $1,000 Weight Loss Drug"
 slug: "berberine-natural-ozempic-weight-loss"
+study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=berberine+metformin+weight+loss+systematic+review+2024"
 description: "Clinical trials show berberine activates AMPK and improves glucose metabolism like GLP-1 drugs—at 1% of the cost"
 keywords: ["berberine benefits", "weight loss supplements", "natural ozempic", "blood sugar control", "ampk activator"]
 publishDate: "2026-02-20"
