--- a/content/posts/coq10-mitochondrial-energy-aging.mdx
+++ b/content/posts/coq10-mitochondrial-energy-aging.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Cellular Power Plant Fuel That Declines 60% by Age 50"
 slug: "coq10-mitochondrial-energy-aging"
+study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=coq10+aging+tissue+distribution+clinical+outcomes+mantle+dybring"
 description: "CoQ10 levels crash with age, causing fatigue and organ decline. Supplementation restores mitochondrial function and energy"
 keywords: ["coq10 benefits", "mitochondrial health", "cellular energy", "anti-aging supplements", "ubiquinol"]
 publishDate: "2026-02-22"
