--- a/content/posts/nmn-brain-aging-reversal-study.mdx
+++ b/content/posts/nmn-brain-aging-reversal-study.mdx
@@ -1,6 +1,7 @@
 ---
 title: "The Brain Compound That Reversed 10 Years of Aging in 12 Weeks"
 slug: "nmn-brain-aging-reversal-study"
+study_url: "https://pmc.ncbi.nlm.nih.gov/articles/PMC12018880/"
 description: "New research shows NMN supplementation reversed cognitive decline markers equivalent to a decade of aging in just 12 weeks"
 keywords: ["nmn benefits", "brain aging", "cognitive decline", "nad+ supplements", "neurodegeneration"]
 publishDate: "2026-02-10"
