Fix RSS feed dates and links

--- a/content/posts/berberine-natural-ozempic-weight-loss.mdx
+++ b/content/posts/berberine-natural-ozempic-weight-loss.mdx
@@ -4,7 +4,7 @@ slug: "berberine-natural-ozempic-weight-loss"
 study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=berberine+metformin+weight+loss+systematic+review+2024"
 description: "Clinical trials show berberine activates AMPK and improves glucose metabolism like GLP-1 drugs—at 1% of the cost"
 keywords: ["berberine benefits", "weight loss supplements", "natural ozempic", "blood sugar control", "ampk activator"]
-publishDate: "2026-02-05"
+date: "2026-02-05"
 author: "Longevity Leak"
 category: "Metabolic Health"
 readTime: "3 min"
