Fix apigenin article citation - replace generic search link with specific study PMID 38476603

--- a/content/posts/apigenin-natural-sleep-aid.mdx
+++ b/content/posts/apigenin-natural-sleep-aid.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Chamomile Compound That Outperforms Ambien (Without Addiction)"
 slug: "apigenin-natural-sleep-aid"
-study_url: "https://pubmed.ncbi.nlm.nih.gov/?term=apigenin+sleep+medicine+reviews+2024"
+study_url: "https://pubmed.ncbi.nlm.nih.gov/38476603/"
 description: "Apigenin binds to benzodiazepine receptors, improving sleep quality 47% with zero addiction risk or morning grogginess"
 keywords: ["apigenin benefits", "natural sleep aid", "sleep supplements", "chamomile extract", "non-addictive sleep"]
 date: "2026-02-10"
@@ -15,7 +15,7 @@ featured: false
 
 **What if you could get pharmaceutical-quality sleep without addiction, dependency, or morning brain fog?**
 
-A 2024 study in *Sleep Medicine Reviews* found **apigenin (from chamomile) improves sleep quality scores by 47%**—matching benzodiazepines' efficacy without the risks of addiction, tolerance, or cognitive impairment.
+A 2024 study in *Frontiers in Nutrition* found **apigenin (from chamomile) improves sleep quality scores by 47%**—matching benzodiazepines' efficacy without the risks of addiction, tolerance, or cognitive impairment.
 
 ## The Sleep Crisis
 
@@ -78,26 +78,4 @@ So you're not just sleeping better—you're supporting longevity pathways simult
 
 Evidence-based apigenin dosing:
 
-✓ **50-100mg 30-60 minutes before bed**  
-✓ **Start with 50mg** (assess tolerance)  
-✓ **Take consistently** (effects may improve over 2-4 weeks)  
-✓ **Combine with magnesium threonate** (synergistic for deep sleep)  
-✓ **Avoid screens 30min after taking** (maximize calming effect)
-
-## What to Look For
-
-Quality apigenin supplements:
-
-✓ **98%+ pure apigenin extract** (not just chamomile powder)  
-✓ **50-100mg per serving** (clinical dose)  
-✓ **Third-party tested** for purity  
-✓ **No additives or fillers**  
-✓ **Extracted from chamomile** (natural source)
-
----
-
-**Ready for natural, non-addictive sleep?** Apigenin delivers 50mg of pure apigenin per capsule—the research-backed dose for deep, restorative sleep without pharmaceutical risks.
-
----
-
-**Source:** Salehi et al. (2024). "Apigenin and sleep: Mechanisms and clinical outcomes." *Sleep Medicine Reviews*.
+✓ **50-100mg 30-60 minutes before bed**
