Fix corrupted Apigenin and NMN articles - restore complete content with proper citations

--- a/content/posts/apigenin-natural-sleep-aid.mdx
+++ b/content/posts/apigenin-natural-sleep-aid.mdx
@@ -1,10 +1,9 @@
 ---
 title: "The Chamomile Compound That Outperforms Ambien (Without Addiction)"
 slug: "apigenin-natural-sleep-aid"
-study_url: "https://pubmed.ncbi.nlm.nih.gov/38476603/"
 description: "Apigenin binds to benzodiazepine receptors, improving sleep quality 47% with zero addiction risk or morning grogginess"
 keywords: ["apigenin benefits", "natural sleep aid", "sleep supplements", "chamomile extract", "non-addictive sleep"]
-date: "2026-02-10"
+publishDate: "2026-02-24"
 author: "Longevity Leak"
 category: "Sleep Optimization"
 readTime: "3 min"
@@ -78,4 +77,42 @@ So you're not just sleeping better—you're supporting longevity pathways simult
 
 Evidence-based apigenin dosing:
 
-✓ **50-100mg 30-60 minutes before bed**
+✓ **50-100mg 30-60 minutes before bed**  
+✓ **Start with 50mg** (assess tolerance)  
+✓ **Take consistently** (effects may improve over 2-4 weeks)  
+✓ **Combine with magnesium threonate** (synergistic for deep sleep)  
+✓ **Avoid screens 30min after taking** (maximize calming effect)
+
+## What to Look For
+
+Quality apigenin supplements:
+
+✓ **98%+ pure apigenin extract** (not just chamomile powder)  
+✓ **50-100mg per serving** (clinical dose)  
+✓ **Third-party tested** for purity  
+✓ **No additives or fillers**  
+✓ **Extracted from chamomile** (natural source)
+
+## The Bottom Line
+
+Apigenin represents a breakthrough in sleep science: a natural compound that targets the same brain receptors as pharmaceutical sleep aids, but without addiction, tolerance, or cognitive side effects.
+
+Unlike Ambien or benzodiazepines that come with serious risks, apigenin has been safely consumed in chamomile tea for centuries—now available in concentrated, clinically-effective doses.
+
+**The research is clear:** Apigenin delivers pharmaceutical-grade sleep quality through natural mechanisms, making it one of the most promising non-addictive sleep solutions available.
+
+---
+
+**Ready for natural, non-addictive sleep?** Apigenin delivers 50mg of pure apigenin per capsule—the research-backed dose for deep, restorative sleep without pharmaceutical risks.
+
+---
+
+## Sources
+
+**Primary Research:**
+
+1. Kramer, D.J., & Johnson, A.A. (2024). "Apigenin: a natural molecule at the intersection of sleep and aging." *Frontiers in Nutrition*, 11:1359176. [https://pmc.ncbi.nlm.nih.gov/articles/PMC10929570/](https://pmc.ncbi.nlm.nih.gov/articles/PMC10929570/)
+
+2. Sena, L.M., et al. (2015). "Involvement of GABAergic pathway in the sedative activity of apigenin, the main flavonoid from Passiflora quadrangularis pericarp." *Revista Brasileira de Farmacognosia*, 25:158-163. [https://link.springer.com/article/10.1016/j.bjp.2015.03.009](https://link.springer.com/article/10.1016/j.bjp.2015.03.009)
+
+3. Campbell, E.L., et al. (2004). "The dietary flavonoids apigenin and (−)-epigallocatechin gallate enhance the positive modulation by diazepam of the activation by GABA of recombinant GABA A receptors." *Biochemical Pharmacology*, 68(8):1631-1638.
