Review articles and mobile UX

--- a/content/posts/berberine-natural-ozempic-weight-loss.mdx
+++ b/content/posts/berberine-natural-ozempic-weight-loss.mdx
@@ -16,3 +16,6 @@ featured: false
 **What if you could get Ozempic's metabolic benefits for $12/month instead of $1,000?**
 
 A clinical trial in the *International Journal of Basic & Clinical Pharmacology* analyzed 18 clinical trials: **berberine improves glucose metabolism and promotes weight loss comparably to metformin**—and shows metabolic effects similar to GLP-1 drugs like Ozempic, minus the injection and price tag.
+## Sources
+
+1. [Primary study](https://www.ijbcp.com/index.php/ijbcp/article/view/6037)
