--- a/content/posts/coq10-mitochondrial-energy-aging.mdx
+++ b/content/posts/coq10-mitochondrial-energy-aging.mdx
@@ -89,3 +89,7 @@ Quality CoQ10 supplements:
 ✓ **GMP-certified manufacturing**
 
 **Source:** Mantle & Dybring (2024). "CoQ10 and aging: Tissue distribution and clinical outcomes." *Free Radical Biology & Medicine*.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/?term=coq10+aging+tissue+distribution+clinical+outcomes+mantle+dybring)
