--- a/content/posts/fisetin-removes-zombie-cells-mayo-clinic.mdx
+++ b/content/posts/fisetin-removes-zombie-cells-mayo-clinic.mdx
@@ -69,3 +69,7 @@ Fisetin supplements vary wildly in quality:
 ✓ **Proper dosing** (most products are underdosed at 100mg)
 
 **Source:** Hickson et al. (2025). "Fisetin senolytic treatment in humans: A pilot study." *GeroScience*. Clinical trial results presented at Longevity Summit 2025.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/38345678/)
