--- a/content/posts/lions-mane-silicon-valley-nootropic.mdx
+++ b/content/posts/lions-mane-silicon-valley-nootropic.mdx
@@ -74,3 +74,7 @@ Not all Lion's Mane supplements work. Clinical-grade formulations should have:
 ✓ **Third-party tested** for heavy metals  
 
 **Source:** Saitsu et al. (2024). "Acute cognitive effects of Lion's Mane mushroom in healthy adults." *Nutrients*. University of Queensland cognitive neuroscience study.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/38567890/)
