--- a/content/posts/magnesium-threonate-brain-health.mdx
+++ b/content/posts/magnesium-threonate-brain-health.mdx
@@ -81,3 +81,7 @@ Quality magnesium L-threonate:
 ✓ **No magnesium oxide or other inferior forms** mixed in
 
 **Source:** Wang et al. (2024). "Magnesium L-threonate and cognitive function in aging." *MIT Brain Research*. 12-week randomized controlled trial.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/?term=magnesium+l-threonate+memory+older+adults+clinical+trial)
