--- a/content/posts/nmn-brain-aging-reversal-study.mdx
+++ b/content/posts/nmn-brain-aging-reversal-study.mdx
@@ -69,3 +69,6 @@ The study used pharmaceutical-grade NMN at 300mg daily, taken in the morning on 
 **Study Reference:** Wang, Y., et al. (2024). "Nicotinamide mononucleotide supplementation reverses age-related cognitive decline via NAD+ restoration." *Cell Death & Disease*, 15(7), 062. [Read full study](https://www.nature.com/articles/s41419-024-07062-1)
 
 *Disclaimer: This article summarizes published research. Consult your healthcare provider before starting any supplementation protocol.*
+## Sources
+
+1. [Primary study](https://www.nature.com/articles/s41419-024-07062-1)
