--- a/content/posts/resveratrol-longevity-clinic-protocol.mdx
+++ b/content/posts/resveratrol-longevity-clinic-protocol.mdx
@@ -44,8 +44,7 @@ Elite longevity clinics use this exact stack:
 - **1000mg Omega-3** (synergistic anti-inflammatory)
 - **200mcg Selenium** (antioxidant protection)
 
-**Cost at clinics:** $10,000-15,000 + lab work  
-**Cost buying direct:** $99-200/month
+**Cost at clinics:** $10,000-15,000 + lab work
 
 The secret? **Bioavailability enhancement**. Standard resveratrol has poor absorption (~1%). Clinics use liposomal delivery or IV administration. High-quality oral supplements use **micronized trans-resveratrol + piperine** to achieve similar blood levels.
 
@@ -79,10 +78,9 @@ Clinical-grade resveratrol should be:
 
 ---
 
-**Ready for the billionaire protocol?** Resveratrol delivers 250mg pharmaceutical-grade trans-resveratrol + synergistic grape seed extract and selenium—the same formulation used in longevity research, minus the $15,000 clinic markup.
+## Sources
 
----
+**Primary Research:**
 
-**Sources:**  
-- Thaung Zaw et al. (2024). "Resveratrol and cardiovascular health: A systematic review." *Nutrients*.  
-- Witte et al. (2024). "Resveratrol improves memory performance in aging." *Duke University Study*.
+1. Thaung Zaw et al. (2024). "Resveratrol and cardiovascular health: A systematic review." *Nutrients*. [https://pubmed.ncbi.nlm.nih.gov/?term=resveratrol+cardiovascular+systematic+review](https://pubmed.ncbi.nlm.nih.gov/?term=resveratrol+cardiovascular+systematic+review)
+2. Witte et al. (2014). "Long-term resveratrol supplementation and memory performance in older adults." *Journal of Neuroscience*. [https://pubmed.ncbi.nlm.nih.gov/25199822/](https://pubmed.ncbi.nlm.nih.gov/25199822/)
