--- a/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
+++ b/content/posts/silicon-valleys-200-month-memory-upgrade.mdx
@@ -23,3 +23,7 @@ This is why executives are paying attention. It is not magic and it is not insta
 And yes, people are stacking it with disciplined sleep and resistance training, because the real winners treat supplements as multipliers, not substitutes.
 
 If your calendar is full, your sleep is thin, and your decisions are expensive, this is the kind of edge that compounds.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/25199822/)
