--- a/content/posts/spermidine-autophagy-cellular-renewal.mdx
+++ b/content/posts/spermidine-autophagy-cellular-renewal.mdx
@@ -79,8 +79,6 @@ Clinical-grade spermidine supplements should have:
 
 ---
 
-**Ready to activate your cellular renewal system?** Spermidine delivers 10mg of research-grade spermidine from organic wheat germ extract—the same dosage shown to extend healthspan in longevity studies.
+## Sources
 
----
-
-**Source:** Schroeder et al. (2024). "Spermidine intake and mortality: 20-year follow-up." *Nature Aging*. Austrian longevity cohort study.
+1. Schroeder et al. "Spermidine intake and mortality: 20-year follow-up." [https://pubmed.ncbi.nlm.nih.gov/?term=spermidine+intake+mortality+20-year+follow-up](https://pubmed.ncbi.nlm.nih.gov/?term=spermidine+intake+mortality+20-year+follow-up)
