--- a/content/posts/the-polyphenol-stack-quietly-winning-in-cognition-clinics.mdx
+++ b/content/posts/the-polyphenol-stack-quietly-winning-in-cognition-clinics.mdx
@@ -16,3 +16,7 @@ Clinicians working in preventive cognition are not chasing shiny compounds anymo
 Resveratrol remains the flagship because it has direct evidence in older adults for memory retention support over a 26-week window. The effect is not explosive, but consistency beats novelty in brain health. Better blood flow and better metabolic control are exactly the levers you want if memory is the target.
 
 Think of this as a quiet compounding play: fewer bad brain days now, less decline pressure later.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/25199822/)
