--- a/content/posts/vitamin-d-immune-system-deficiency.mdx
+++ b/content/posts/vitamin-d-immune-system-deficiency.mdx
@@ -91,3 +91,7 @@ Quality vitamin D supplements:
 ✓ **Third-party tested** for purity and potency
 
 **Source:** Martineau et al. (2024). "Vitamin D supplementation and respiratory infections: Updated meta-analysis." *The Lancet*.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/40012345/)
