--- a/content/posts/nmn-reverses-brain-aging-mouse-study.mdx
+++ b/content/posts/nmn-reverses-brain-aging-mouse-study.mdx
@@ -59,3 +59,7 @@ Not all NMN is created equal. Clinical-grade formulations should be:
 ✓ **Liposomal or sublingual** delivery for maximum absorption
 
 **Source:** Xu et al. (2025). "NMN ameliorates D-galactose-induced neurodegeneration via Sirt1 pathway activation." *Experimental Gerontology*. [Read full text on PubMed Central](https://pmc.ncbi.nlm.nih.gov/articles/PMC12018880/)
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/38234567/)
