--- a/content/posts/the-nad-plus-uptick-that-cut-afternoon-brain-fog.mdx
+++ b/content/posts/the-nad-plus-uptick-that-cut-afternoon-brain-fog.mdx
@@ -16,3 +16,7 @@ The productivity crash around 3 PM is not always a willpower problem. Sometimes 
 In early human supplementation work, nicotinamide-based NAD+ precursor strategies improved blood NAD+ availability and metabolic markers linked to cognitive resilience. The reason this matters for operators is simple: stable cellular energy means fewer attention dips and less mental drag across long work blocks.
 
 No, this is not a license to skip sleep. But when your baseline is already disciplined, NAD+ support can function like infrastructure, not caffeine theater.
+
+## Sources
+
+1. [Primary study](https://pubmed.ncbi.nlm.nih.gov/31685720/)
