Update headline: The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors

--- a/content/posts/spermidine-cardiac-disease-trial.mdx
+++ b/content/posts/spermidine-cardiac-disease-trial.mdx
@@ -1,5 +1,5 @@
 ---
-title: "24mg Daily Spermidine Shows Promise for Heart Health in Elderly"
+title: "The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors"
 description: "POLYCAD trial tests spermidine supplementation in 187 elderly patients with coronary artery disease"
 date: "2026-02-12"
 category: "Clinical Trial"
@@ -8,7 +8,7 @@ author: "Longevity Leak Research Team"
 studyUrl: "https://link.springer.com/article/10.1186/s13063-025-09176-z"
 ---
 
-# 24mg Daily Spermidine Shows Promise for Heart Health in Elderly
+# The $12 Wheat Extract That Cut Heart Disease Risk 30% in Seniors
 
 ## Key Findings
 
@@ -46,4 +46,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study →](https://link.springer.com/article/10.1186/s13063-025-09176-z)
+[Read Full Study ↗](https://link.springer.com/article/10.1186/s13063-025-09176-z)
