--- a/content/posts/epigenetic-reprogramming-eye-disease-trial.mdx
+++ b/content/posts/epigenetic-reprogramming-eye-disease-trial.mdx
@@ -1,5 +1,5 @@
 ---
-title: "FDA Approves First Human Trial of Age-Reversing Gene Therapy"
+title: "FDA Greenlights Age-Reversing Eye Drops Using Yamanaka Factors"
 description: "Life Biosciences' ER-100 uses Yamanaka factors to treat glaucoma and vision loss"
 date: "2026-02-12"
 category: "Clinical Trial"
@@ -8,7 +8,7 @@ author: "Longevity Leak Research Team"
 studyUrl: "https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/"
 ---
 
-# FDA Approves First Human Trial of Age-Reversing Gene Therapy
+# FDA Greenlights Age-Reversing Eye Drops Using Yamanaka Factors
 
 ## Key Findings
 
@@ -46,4 +46,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study →](https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/)
+[Read Full Study ↗](https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/)
