fix: restore directory/relationship modules and recover build

--- a/content/posts/caloric-restriction-mimetics-2025-review.mdx
+++ b/content/posts/caloric-restriction-mimetics-2025-review.mdx
@@ -5,7 +5,7 @@ date: "2026-02-12"
 category: "Research"
 featured: false
 author: "Longevity Leak Research Team"
-studyUrl: "https://link.springer.com/article/10.1007/s10522-025-10269-0"
+study_url: "https://link.springer.com/article/10.1007/s10522-025-10269-0"
 ---
 
 # Why Longevity Drugs Now Target 5 Pathways Instead of One Disease
