Update NAD+ boosters article - 2026-02-14

--- a/content/posts/nad-boosters-human-trial-comparison.mdx
+++ b/content/posts/nad-boosters-human-trial-comparison.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Why Silicon Valley Stopped Taking Nicotinamide (And Switched to This)"
 description: "First direct human comparison reveals gut bacteria convert NAD+ precursors to boost longevity molecules"
-date: "2026-02-12"
+date: "2026-02-14"
 category: "Research"
 featured: false
 author: "Longevity Leak Research Team"
@@ -46,4 +46,4 @@ Additional studies will help clarify optimal dosing, timing, and population-spec
 
 Access the original full-text paper for deeper clinical validation.
 
-[Read Full Study ↗](https://www.nature.com/articles/s42255-025-01421-8)
+[Read Full Study →](https://www.nature.com/articles/s42255-025-01421-8)
