Publish article: Why Longevity Drugs Now Target 5 Pathways Instead of One Disease - 2026-02-16

--- a/content/posts/caloric-restriction-mimetics-2025-review.mdx
+++ b/content/posts/caloric-restriction-mimetics-2025-review.mdx
@@ -1,13 +1,14 @@
 ---
-title: "Why Longevity Drugs Now Target 5 Pathways Instead of One Disease"
-description: "2025 review highlights shift toward geroprot ectors targeting AMPK, mTOR, and autophagy pathways"
-date: "2026-02-12"
-category: "Research"
+title: Why Longevity Drugs Now Target 5 Pathways Instead of One Disease
+description: 2025 review highlights shift toward geroprot ectors targeting AMPK, mTOR,
+  and autophagy pathways
+date: '2026-02-16'
+category: Research
 featured: false
-author: "Longevity Leak Research Team"
-study_url: "https://link.springer.com/article/10.1007/s10522-025-10269-0"
+author: Longevity Leak Research Team
+study_url: https://link.springer.com/article/10.1007/s10522-025-10269-0
+published: true
 ---
-
 # Why Longevity Drugs Now Target 5 Pathways Instead of One Disease
 
 ## Key Findings
