--- a/content/posts/epigenetic-reprogramming-eye-disease-trial.mdx
+++ b/content/posts/epigenetic-reprogramming-eye-disease-trial.mdx
@@ -1,13 +1,14 @@
 ---
-title: "FDA Greenlights Age-Reversing Eye Drops Using Yamanaka Factors"
-description: "Life Biosciences' ER-100 uses Yamanaka factors to treat glaucoma and vision loss"
-date: "2026-02-12"
-category: "Clinical Trial"
+title: FDA Greenlights Age-Reversing Eye Drops Using Yamanaka Factors
+description: Life Biosciences' ER-100 uses Yamanaka factors to treat glaucoma and
+  vision loss
+date: '2026-02-16'
+category: Clinical Trial
 featured: false
-author: "Longevity Leak Research Team"
-study_url: "https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/"
+author: Longevity Leak Research Team
+study_url: https://www.fightaging.org/archives/2026/02/the-first-clinical-trial-of-partial-reprogramming-will-start-soon/
+published: true
 ---
-
 # FDA Greenlights Age-Reversing Eye Drops Using Yamanaka Factors
 
 ## Key Findings
