Publish article: Why Silicon Valley Stopped Taking Nicotinamide (And Switched to This) - 2026-02-16

--- a/content/posts/nad-boosters-human-trial-comparison.mdx
+++ b/content/posts/nad-boosters-human-trial-comparison.mdx
@@ -1,13 +1,14 @@
 ---
-title: "Why Silicon Valley Stopped Taking Nicotinamide (And Switched to This)"
-description: "First direct human comparison reveals gut bacteria convert NAD+ precursors to boost longevity molecules"
-date: "2026-02-14"
-category: "Research"
+title: Why Silicon Valley Stopped Taking Nicotinamide (And Switched to This)
+description: First direct human comparison reveals gut bacteria convert NAD+ precursors
+  to boost longevity molecules
+date: '2026-02-16'
+category: Research
 featured: false
-author: "Longevity Leak Research Team"
-studyUrl: "https://www.nature.com/articles/s42255-025-01421-8"
+author: Longevity Leak Research Team
+studyUrl: https://www.nature.com/articles/s42255-025-01421-8
+published: true
 ---
-
 # Why Silicon Valley Stopped Taking Nicotinamide (And Switched to This)
 
 ## Key Findings
